# budgie-desktop

./: Makefile.am  common.mk  configure.ac
core/: BudgieInterfaces.vala  Makefile.am
panel/: Makefile.am
panel/applets/budgie-menu/: Makefile.am
panel/applets/clock/: Makefile.am
panel/applets/notifications/: Makefile.am
panel/applets/status/: BrightnessIndicator.vala  Makefile.am  SoundIndicator.vala  StatusApplet.vala
wm/: budgie-wm.c
